refactor: add python-jose

--- a/AWSUsageScript/requirements.txt
+++ b/AWSUsageScript/requirements.txt
@@ -2,6 +2,7 @@
 boto3>=1.39.0
 pydantic>=2.11.0
 uvicorn>=0.35.0
+python-jose[cryptography]
 
 # Development/optional dependencies (uncomment if needed)
 # pipreqs>=0.4.13  # For generating requirements.txt
