--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       - "3000:80"
     container_name: aws-usage-frontend
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
+    environment:
+      - REACT_APP_API_BASE_URL=http://localhost:5001
 
   backend:
     build:
@@ -18,3 +21,9 @@ services:
     container_name: aws-usage-backend
     volumes:
       - ./data:/app/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
